# ezatwork-mcp

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild-mcp.yaml  pyproject.toml  requirements.txt  server.json
src/ezatwork_mcp/: auth.py  ez_client.py  server.py  tool_helpers.py
src/ezatwork_mcp/tools/: clients.py  invoices.py  projects.py  time_entries.py
tests/: test_ez_client.py
