[project]
name = "ezatwork-mcp"
version = "0.1.0"
description = "MCP server for EZ@Work — business management for freelancers, lawyers, agencies"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ezatwork-mcp = "ezatwork_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
